# T-Finance

./: .design-canvas.state.json  .thumbnail  README.md  ROADMAP.html  T-Finance App (standalone).html  T-Finance App.html  T-Finance-bundle.html  T-Finance.html  index.html  indнемогудалить ex.html  manifest.json  sw.js  удалитьindex.html
.github/workflows/: deploy.yml
app-src/: analytics.jsx  analytics2.jsx  analytics3.jsx  app.css  main.jsx  screens.jsx  screens2.jsx  screens3.jsx  store.js  supabase-sync.js  ui.jsx
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  deps.py  main.py  schemas.py  security.py  seed.py
backend/app/models/: __init__.py  account.py  card.py  category.py  credit.py  goal.py  investment.py  transaction.py  user.py
backend/app/routers/: accounts.py  analytics.py  auth.py  cards.py  credits.py  goals.py  investments.py  transactions.py  transfers.py
mobile/: App.tsx  README.md  app.json  babel.config.js  package.json  tsconfig.json
mobile/src/api/: client.ts
mobile/src/screens/: BootScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  TransferScreen.tsx
mobile/src/theme/: tokens.ts
src/: brand-showcase.jsx  charts.jsx  dashboards-1.jsx  dashboards-2.jsx  data.js  frame.jsx  main.jsx  screens-mobile.jsx  screens-web-1.jsx  screens-web-2.jsx  screens-web-3.jsx  styles.css  ui.jsx
web/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: shell.tsx  (+2 more)
(+14 files in other folders)
